# YiZhiXianYu_cpp_course-project

./: .gitignore  README.md  index.html  map01.html  map02.html  soldier-idle-test.html  start.js  style.css
assets/map/: demonstration.tsx  thestart.tiled-session  地牢1.tmx  地牢2.tmx  地牢3.tmx
cpp/: CMakeLists.txt  README.md  build_game_wasm.bat  build_game_wasm.ps1
cpp/src/: main.cpp
cpp/src/core/: CameraController.cpp  CameraController.hpp  CharacterRole.cpp  CharacterRole.hpp  MonsterController.cpp  MonsterController.hpp  MonsterRole.cpp  MonsterRole.hpp  PlayerController.cpp  PlayerController.hpp  Types.hpp
cpp/src/web/: GameCoreBridge.cpp
cpp/web/: README.md  game_core.js  game_core.wasm
css/: map-game.css  style.css
html/: index.html  map01.html  map02.html  map03.html
js/: cpp-runtime.js  map-game-shared.js  start.js
